<resources>
    <string name="app_name">Scrabble Score</string>
    <string name="start">Start</string>
    <string name="resource_l">l</string>
    <string name="zero">0</string>
    <string name="cs">image</string>
<string name="dt">Delete Turn</string>
    <string name="aw">Another Word</string>
    <string name="ss">Score Sheet</string>
    <string name="nw">No Words</string>
<string name="st">Skip Turn</string>
    <string name="tws">Total Word Score: 0</string>
    <string name="tws2">Total Word Score: %1$d</string>
    <string name="ws">Word Score: 0</string>
    <string name="ws2">Word Score: %1$d</string>

    <string name="hint">Click here to enter a word.</string>
    <string name="ays">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ssp">Scrabble Score Platinum Available Now\nClick Here to download now</string>
<string name="nop">2 Player</string>
    <string name="p1n">Player 1 Name:</string>
    <string name="p2n">Player 2 Name:</string>
    <string name="p3n">Player 3 Name:</string>
    <string name="p4n">Player 4 Name:</string>
    <string name="TwoPlayer">2 Player</string>
    <string name="ThreePlayer">3 Player</string>
    <string name="FourPlayer">4 Player</string>
    <string name="ds">Dictionary Setup</string>
    <string name="ed">Enable Dictionary: </string>
    <string name="pn">Please note: This is a platinum feature and will only work for the first 5 words on the free version.</string>
<string name="ospd">Official Scrabble Players Dictionary (OSPD)</string>
    <string name="ospd2">This Scrabble word list is used in the United States, Canada, Thailand and Israel.</string>
    <string name="sowpods">SOWPODS</string>
    <string name="sowpods2">SOWPODS is a Scrabble word list used in all English speaking countries excluding the United States, Canada, Israel and Thailand. It is a combination of British words from the Collings English Dictionary and American words from the Official Tournament and Club Word List (OSPD).</string>
    <string name="epo">Enable Player Override: </string>
    <string name="ove">Override a Word if its not in the dictonary.</string>
    <string name="done">done</string>
    <string name="congrats">Congratulations&#032;</string>
    <string name="ng">New Game</string>
    <string name="ra">Rate App</string>
    <string name="lr">Please enter your remaining letters.</string>
    <string name="points">If you have no letters left then 50 points wll be added to your score.</string>
    <string name="enter">enter</string>
    <string name="wo">Would you like to Override?</string>
    <string name="sb">Score Board</string>
    <string name="close">Close</string>

    <string name="sspn">Scrabble Score dictionary \nfeature demo has finished.\nTo use the dictionary for all\nyour words and get rid of the ads\ndownload Scrabble Score Platinum now!</string>
<string name="cg">Continue Game</string>
    <string name="skip">Would you like to exchange your tiles and skip your turn?</string>
    <string name="wcg">Would you like to continue your game?</string>
<string name="adw">Add Word</string>
    <string name="wb">Welcome Back</string>
    <string name="dlw">Would you like to delete your last word?</string>
    <string name="aw2">Would you like to enter another word?</string>
    <string name="colonname">%1$s:</string>
</resources>
