<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:id="@+id/platinumbutton2"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/cs"
            android:background="@android:color/transparent"
            android:onClick="scrabbleScorePlatinum"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/iconp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:onClick="scrabbleScorePlatinum"
            android:padding="0dp"
            android:text="@string/ssp"
            android:textAlignment="center"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:text="@string/congrats"/>
    <TextView
        android:id="@+id/winner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        />
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
    <TextView
        android:id="@+id/p1eg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
        <TextView
            android:id="@+id/p1scoreeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:id="@+id/p2eg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           />
        <TextView
            android:id="@+id/p2scoreeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone"
        android:id="@+id/p3v">
        <TextView
            android:id="@+id/p3eg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/p3scoreeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:padding="10dp"
        android:id="@+id/p4v">
        <TextView
            android:id="@+id/p4eg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/p4scoreeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/newgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            style="?android:attr/buttonStyle"
        android:text="@string/ng"
            />
    <Button

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyle"
        android:text="@string/ss"
        android:onClick="scoreSheetBox"
        android:layout_weight="1"
        />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchMarket"
        android:text="@string/ra"
        android:textAllCaps="true" />
</LinearLayout>