<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialogbg"
    android:gravity="center"
    android:layout_gravity="center"
    android:screenOrientation="portrait"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/cs"
            android:background="@android:color/transparent"
            android:onClick="scrabbleScorePlatinum"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/iconp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:onClick="scrabbleScorePlatinum"
            android:padding="0dp"
            android:text="@string/ssp"
            android:textAlignment="center"
            android:textSize="12sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/sb"
        android:textAlignment="center"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/p1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:contentDescription="@string/cs"
                android:background="@color/red" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/p1words"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text=""
                    android:textSize="12sp" />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/p1total"
    android:gravity="end"
    android:textSize="12sp"
    android:paddingRight="10dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/cs"
            android:background="@color/red" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:contentDescription="@string/cs"
                android:background="@color/red" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/p2words"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text=""
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/p2total"
                    android:gravity="end"
                    android:textSize="12sp"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"

                    />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/ll2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/cs"
            android:background="@color/red"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/p3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/ll7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/red"
                android:contentDescription="@string/cs"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
              android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/p3words"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/p3total"
                    android:gravity="end"
                    android:textSize="12sp"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/ll6"
            android:contentDescription="@string/cs"
            android:layout_width="1dp"
            android:layout_height="match_parent"

            android:background="@color/red"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/p4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:contentDescription="@string/cs"
                android:background="@color/red" />

            <LinearLayout
                android:id="@+id/ll4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
             android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/p4words"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text=""
                    android:gravity="end"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/p4total"
                    android:gravity="end"
                    android:textSize="12sp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ra"
            style="?android:attr/buttonStyle"
        android:textAllCaps="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
        android:onClick="launchMarket"/>
    <Button
        android:id="@+id/exit"
        style="?android:attr/buttonStyle"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close" />
    </LinearLayout>

</LinearLayout>